--- a/frontend/app/assets/styles/_Header.scss
+++ b/frontend/app/assets/styles/_Header.scss
@@ -5,7 +5,12 @@ $nav-bar-height: 80px;
 // Index -------------------------------------------------
 
 .header-comp{
+  @include rect(100%,$nav-bar-height);
+  position: fixed;
+  background-color: #eff7f7;	
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   overflow: hidden;
+  z-index: 50;
 
   .con-grp{
     height:100%;
@@ -15,16 +20,14 @@ $nav-bar-height: 80px;
     margin-left: 70px;
     display: inline-block;
     img{
-        display: inline;
-        vertical-align: middle;
+      @include rect(230px, initial);
+      display: inline;
+      vertical-align: middle;
     }
   }
 
   .header-container{
-    @include rect(100%,$nav-bar-height);
-    position: fixed;
-    box-shadow: 0px 5px 13px 0px rgba(50,50,50,0.05);
-    z-index: 50;
+    
     overflow: hidden;
 
     .logo-svg{
@@ -40,9 +43,10 @@ $nav-bar-height: 80px;
 
 .nav-bar-comp{
   @include rect(100%,$nav-bar-height);
-  position: fixed;
-  background-image: linear-gradient(118deg, #00aae3, #0cfdfb);
- 
+  // background-image: linear-gradient(118deg, #00aae3, #0cfdfb);
+
+
+
   .navbar-ul{
     margin-left: 50px;
     height: 110%;
