--- a/frontend/app/assets/styles/style.scss
+++ b/frontend/app/assets/styles/style.scss
@@ -7,7 +7,11 @@
 @import "_Header";
 @import "_Footer";
 @import "_SideNav";
+@import "_Thumbnails";
 
 // Custom
-@import "_Footer_Ai_Lab";
+@import "_Footer_ai";
+@import "_SectionTitle_ai";
 @import "_IndexPage";
+
+@import "_Thumbnails_ai";
