--- a/frontend/app/assets/styles/_Footer_ai.scss
+++ b/frontend/app/assets/styles/_Footer_ai.scss
@@ -44,8 +44,14 @@ $footer-bottom-bg: #00aae3;
         color:$primary-color;
         text-decoration: none;
         border-radius: 50px;
-        box-shadow: 0 20px 30px 0 rgba(37, 15, 138, 0.2);
+        transition: all .2s ease-in-out;
         cursor: pointer;
+        opacity: 0.9;
+
+        &:hover {
+          opacity: 1;
+          box-shadow: 0 20px 30px 0 rgba(37, 15, 138, 0.2);
+        }
       }
     }
   }
@@ -54,146 +60,21 @@ $footer-bottom-bg: #00aae3;
 
   .middle-part-bg{
     
+    background-color: #E1E1E1;
     overflow: hidden;
-    // @include rect-center(1200px,initial);
-    // display: inline-block;
     
-    .middle-part-ul {
-      margin-top: 36px;
-      margin-bottom: 20px;
-    }
-
-
-
-    .footer-part{
-
-      @include rect($footer-col-width,initial);
-      border-right: 1px solid #333;
-      float:left;
-      text-align: left;
-      
-      &:nth-child(2){
-        @include rect($footer-col-width,initial);
-        border-right: 0px;
-        // border-left: 1px solid $border-color;
-        // border-right: 1px solid $border-color;
-      }
-      
-      &:nth-child(3){
-        @include rect(300px,initial);
-      }
-
-
-      .part-container{
-        
-        margin-top: 30px;
-        margin-bottom: 30px;
-        margin-right: 2px;
-        float: left;
-
-        .title{
-          color: $primary-color;
-          font-weight: bolder;
-        }
-
-        .info-container{
-          margin-top: 10px;
-        }
-        
-        .info-li{
-          @include rect-center(100%,initial);
-          
-
-          .link-format-comp {
-            .link-text {
-              color: $text-color;
-              p {
-
-              }
-            }
-          }
-
-
-
-
-
-          .social-icon-bg{
-            // @include circle(36px);
-            @include margin(10px);
-            // margin-top: 30px;
-            float: left;
-            // background-color: $primary-color;
-
-            img{
-                
-                vertical-align: middle;
-                display: inline-block;
-                // //只剩一個時
-            
-                // @include center;
-                // float: initial;
-            }
-          }
-        }
-      }
-
-      .divide-line{
-        @include rect(1px, 115px);
-        float: left;
-        background-color: #000;
-        margin-left: 30px;
-        display: none;
-      }
-
-      &:nth-child(3){
-        .divide-line{
-          display: none;
-        }
-      }
-    }
-
-    .footer-part-1 {
-      height: 122px;
-    }
-
-    .footer-part-2 {
-      height: 115px;
-    }
-
-    .middle-part-icon-ul {
-
-      @include margin(0px);
-      position: absolute;
-      width: 100%;
-      
-      .middle-part-icon {
-        @include center;
-        width: 120px;
-        margin-top:385px;
-
-        a {
-          @include margin(10px);
-          display: inline-block;
-        }
-      }
-    }
-
-
-    .icon-ul{
-      @include rect-center(80px, 40px);
-      @include margin-v(30px);
-      margin-top: 80px;
-      margin-right: 0px;
-
-      a{
-        float: left;
-        img{
-          @include margin(5px);
-          width: 30px;
-        }
-      }
+    .footer-logo {
+      @include rect-center(385px,60px);
+      margin-top: 40px;
+      margin-bottom:40px;
 
     }
+
+    .line-h {
+      @include rect-center(100%, 1px);
+      background-color: #000;
+    }
+
   }
 
   // FooterBottom -------------------------------------------------
@@ -208,6 +89,11 @@ $footer-bottom-bg: #00aae3;
     font-size: 20px;
     color: #fff;
     z-index: 5;
+    
+    h5 {
+      line-height: 50px;
+      font-size: 12px;
+    }
 
     span {
       font-size: 11px;
