--- a/frontend/app/assets/styles/_Header.scss
+++ b/frontend/app/assets/styles/_Header.scss
@@ -1,6 +1,7 @@
 
 
 $nav-bar-height: 80px;
+$nav-li-underline-color: #f5d600;
 
 // Index -------------------------------------------------
 
@@ -45,15 +46,21 @@ $nav-bar-height: 80px;
   @include rect(100%,$nav-bar-height);
   // background-image: linear-gradient(118deg, #00aae3, #0cfdfb);
 
-
-
   .navbar-ul{
     margin-left: 50px;
     height: 110%;
 
     li {
-      margin-top: 30px;
+      height: 91%;
+      margin-top: 0px;
+      padding-top: 30px;
       float: left;
+      transition: all .2s ease-in-out;
+    }
+
+
+    .li-active {
+      // border-bottom: 5px solid $nav-li-underline-color;
     }
 
     .navbar-li{
