--- a/frontend/app/assets/styles/_Footer_ai.scss
+++ b/frontend/app/assets/styles/_Footer_ai.scss
@@ -75,8 +75,17 @@ $footer-bottom-bg: #00aae3;
       background-color: #000;
     }
 
-  }
+    .nav-bar-comp {
+      height: 70px;
+      .navbar-ul {
+        @include rect-center(384px, 50px);
+        li {
+          
+        }
+      }
+    }
 
+  }
   // FooterBottom -------------------------------------------------
 
 
