--- a/frontend/app/assets/styles/style.scss
+++ b/frontend/app/assets/styles/style.scss
@@ -10,9 +10,11 @@
 // Custom
 @import "_IndexPage";
 @import "_ContactPage";
+@import "_AuthPage";
+
 
 @import "_Course";
-
+@import "_Login";
 
 @import "_Footer_ai";
 @import "_SectionTitle_ai";
