--- a/frontend/app/assets/styles/_base.scss
+++ b/frontend/app/assets/styles/_base.scss
@@ -462,5 +462,14 @@ html{
     a{
       text-decoration: none;
     }
+
+    // Custom
+    .section-grp {
+      .bg-grp{
+        width: 100%;
+      }
+    }
+
+
   }
 }
