--- a/frontend/app/assets/styles/_base.scss
+++ b/frontend/app/assets/styles/_base.scss
@@ -9,6 +9,11 @@ $footer-info-gray: #9B9B9B;
 $bg-color: #f4f4f4;
 $highlight-color: #48D2A0;
 
+
+$nav-font-color: #373838;
+
+
+
 /*------- 尺寸 -------*/
 
 $desktop: 960px;
