--- a/frontend/app/assets/styles/style.scss
+++ b/frontend/app/assets/styles/style.scss
@@ -11,6 +11,16 @@
 @import "_IndexPage";
 @import "_ContactPage";
 @import "_AuthPage";
+@import "_UserPage";
+
+
+@import "_TableList";
+@import "_LinkFormat";
+@import "_SideMenu";
+@import "_DogTag";
+
+
+
 
 
 @import "_Course";
