--- a/frontend/app/assets/styles/_base.scss
+++ b/frontend/app/assets/styles/_base.scss
@@ -12,7 +12,8 @@ $highlight-color: #48D2A0;
 
 $nav-font-color: #373838;
 
-
+$ai-main-grey: #373838;
+$ai-light-grey: #f8f4f4;
 
 /*------- 尺寸 -------*/
 
