add form groups

--- a/frontend/app/assets/styles/_base.scss
+++ b/frontend/app/assets/styles/_base.scss
@@ -14,6 +14,8 @@ $nav-font-color: #373838;
 
 $ai-main-grey: #373838;
 $ai-light-grey: #f8f4f4;
+$ai-input-border-default: #ddd;
+$ai-input-border-hover: #2a9b9d; 
 
 /*------- 尺寸 -------*/
 
