--- a/frontend/app/assets/styles/style.scss
+++ b/frontend/app/assets/styles/style.scss
@@ -6,6 +6,9 @@
 @import "_Footer";
 @import "_SideNav";
 @import "_Thumbnails";
+@import "_Toast";
+@import "_Button";
+
 
 // Custom
 @import "_IndexPage";
