--- a/frontend/app/assets/styles/_base.scss
+++ b/frontend/app/assets/styles/_base.scss
@@ -17,6 +17,7 @@ $ai-light-grey: #f8f4f4;
 $ai-input-border-default: #ddd;
 $ai-input-border-hover: #2a9b9d; 
 $ai-secondary-light-green: #6ec7cf;
+$ailab-super-light-green: #d4ebeb;
 
 /*------- 尺寸 -------*/
 
