--- a/frontend/app/assets/styles/style.scss
+++ b/frontend/app/assets/styles/style.scss
@@ -18,6 +18,7 @@
 @import "_UserPage";
 
 
+
 @import "_TableList";
 @import "_LinkFormat";
 @import "_SideMenu";
@@ -25,7 +26,7 @@
 @import "_HeaderBlock";
 @import "_FormGroups";
 
-
+@import "_MarkdownEditor";
 
 
 
