add tags input of dataset

--- a/frontend/app/assets/styles/_UserPage.scss
+++ b/frontend/app/assets/styles/_UserPage.scss
@@ -34,6 +34,19 @@
     }
 
 
+    .user-course-edit-bg {
+      .form-group {
+        .main-label {
+          font-size: 18px;
+          color: $ailab-black-text;
+          letter-spacing: 0.1px;
+          font-weight: 400;
+        }
+      }
+
+    }
+
+
     // 工作清單
     .user-job-bg {
       .job-group {
