--- a/frontend/app/assets/styles/_FormGroups.scss
+++ b/frontend/app/assets/styles/_FormGroups.scss
@@ -42,15 +42,20 @@ $form-group-row-margin: 20px;
 
 	}
 
-	.radio-con {
-		label {
-			line-height: 29px;
-			.radio-input {
-				display: inline-block;
-				float: left;
-				width: 22px;
-			}
+	.radio-input-con {
+		
+		width: 100px;
+
+		.radio-input {
+			display: inline-block;
+			width: 22px;
 		}
+
+		span {
+			transform: translateY(1px);
+			display: inline-block;
+		}
+		
 	}
 
 	.md-input {
