--- a/frontend/app/assets/styles/_base.scss
+++ b/frontend/app/assets/styles/_base.scss
@@ -18,6 +18,7 @@ $ai-input-border-default: #ddd;
 $ai-input-border-hover: #2a9b9d; 
 $ai-secondary-light-green: #6ec7cf;
 $ailab-super-light-green: #d4ebeb;
+$ailab-black-text: #373838;
 
 /*------- 尺寸 -------*/
 
