fix course intro page

--- a/frontend/app/assets/styles/_base.scss
+++ b/frontend/app/assets/styles/_base.scss
@@ -14,12 +14,13 @@ $nav-font-color: #373838;
 
 $ai-main-grey: #373838;
 $ai-light-grey: #f8f4f4;
+$ailab-black-text: #373838;
 $ai-input-border-default: #ddd;
 $ai-input-border-hover: #2a9b9d; 
 $ai-secondary-light-green: #6ec7cf;
 $ailab-super-light-green: #d4ebeb;
 $ailab-black-text: #373838;
-
+$ailab-primary-dark-green:#2a9b9d;
 /*------- 尺寸 -------*/
 
 $desktop: 960px;
@@ -161,6 +162,15 @@ $title-size: 27px;
     top: 50%;
     transform: translateY(-50%);
 
+}
+
+
+/*------- 置中child -------*/
+
+@mixin center-child{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
