--- a/frontend/app/assets/styles/style.scss
+++ b/frontend/app/assets/styles/style.scss
@@ -16,9 +16,11 @@
 @import "_ContactPage";
 @import "_AuthPage";
 @import "_UserPage";
+@import "_CoursePage";
 
 
 
+@import "_ListView";
 @import "_TableList";
 @import "_LinkFormat";
 @import "_SideMenu";
@@ -27,10 +29,9 @@
 @import "_FormGroups";
 
 @import "_MarkdownEditor";
+@import "_CustomJumbotron";
 
 
-
-@import "_Course";
 @import "_Login";
 
 @import "_Footer_ai";
