complete markdown editor

--- a/frontend/app/assets/styles/_base.scss
+++ b/frontend/app/assets/styles/_base.scss
@@ -454,7 +454,7 @@ html{
     h4{ font-size: 20px; }
     h5{ font-size: 16px; }
     h6{ font-size: 14px; }
-    span{ font-size: 14px; }
+    // span{ font-size: 14px; }
 
     p{  
       font-size: 12px; 
