--- a/frontend/app/assets/styles/_global.scss
+++ b/frontend/app/assets/styles/_global.scss
@@ -9,6 +9,7 @@
     overflow: hidden;
 
     .global-content{
+      position: relative;
       margin-top: 80px;
       min-height:500px;
       overflow: hidden;
