--- a/frontend/app/assets/styles/_UserPage.scss
+++ b/frontend/app/assets/styles/_UserPage.scss
@@ -1,14 +1,15 @@
 .user-bg {
   .side-menu-wrap {
-  
-    min-height: 1000px;
-    position: relative;
+    
+    position: absolute;
+    min-height: 1500px;
     background-color: #f8f4f4;
   
   }
 
   .user-container {
     width: 80%;
+    margin-left: 225px;
     padding-left: 80px;
     padding-top: 100px;
 
@@ -42,6 +43,10 @@
           letter-spacing: 0.1px;
           font-weight: 400;
         }
+      }
+
+      .submit-bg {
+        margin-bottom: 100px;
       }
 
     }
