--- a/frontend/app/assets/styles/_base.scss
+++ b/frontend/app/assets/styles/_base.scss
@@ -21,6 +21,8 @@ $ai-secondary-light-green: #6ec7cf;
 $ailab-super-light-green: #d4ebeb;
 $ailab-black-text: #373838;
 $ailab-primary-dark-green:#2a9b9d;
+$ailab-black: #000;
+$ailab-grey-03: #EAEAEA;
 /*------- 尺寸 -------*/
 
 $desktop: 960px;
