--- a/frontend/app/assets/styles/style.scss
+++ b/frontend/app/assets/styles/style.scss
@@ -9,6 +9,7 @@
 @import "_Toast";
 @import "_DataFrame";
 @import "_Button";
+@import "_Progress";
 
 
 // Custom
@@ -17,6 +18,9 @@
 @import "_AuthPage";
 @import "_UserPage";
 @import "_CoursePage";
+
+
+@import "_Dialog";
 
 
 
