--- a/frontend/app/assets/styles/_FormGroups.scss
+++ b/frontend/app/assets/styles/_FormGroups.scss
@@ -58,11 +58,20 @@ $form-group-row-margin: 20px;
 		
 	}
 
-	.md-input {
+	.md-editor-comp {
+		overflow: hidden;
 		min-height: 160px;
 		border: 2px solid $form-group-border-color;
+		border-radius: 4px; 
 		padding-left: 10px;
-    padding-top: 10px;
+		padding-top: 10px;
+		
+		// 預設樣式
+		blockquote {
+			border-left: 3px solid #ddd;
+    	padding-left: 1rem;
+		}
+
 	}
 
 	.errors{
