--- a/frontend/app/assets/styles/_base.scss
+++ b/frontend/app/assets/styles/_base.scss
@@ -23,6 +23,7 @@ $ailab-black-text: #373838;
 $ailab-primary-dark-green:#2a9b9d;
 $ailab-black: #000;
 $ailab-grey-03: #EAEAEA;
+$ailab-primary-dark-text: '#373838';
 /*------- 尺寸 -------*/
 
 $desktop: 960px;
