--- a/frontend/app/assets/styles/_DogTag.scss
+++ b/frontend/app/assets/styles/_DogTag.scss
@@ -22,6 +22,14 @@
       margin-bottom: 0px;
     }
 
+    .name-overflow {
+      max-width: 130px;
+      font-size: 13px;
+      word-break: break-all;
+      text-align: justify;
+    }
+
+
     p {
       font-size: 14px;
     }
