--- a/frontend/app/assets/styles/style.scss
+++ b/frontend/app/assets/styles/style.scss
@@ -32,6 +32,7 @@
 @import "_DogTag";
 @import "_HeaderBlock";
 @import "_FormGroups";
+@import "_JobList";
 
 @import "_MarkdownEditor";
 @import "_CustomJumbotron";
