--- a/frontend/app/assets/styles/_CoursePage.scss
+++ b/frontend/app/assets/styles/_CoursePage.scss
@@ -15,6 +15,10 @@
       @include rect-center(1000px, initial);
     }
   }
+
+  .section-list-comp {
+    margin-top: 60px;
+  }
 }
 
 .course-detail-bg {
