--- a/frontend/app/assets/styles/_SectionList.scss
+++ b/frontend/app/assets/styles/_SectionList.scss
@@ -1,5 +1,12 @@
 .section-list-comp {
 
+  .section-list-info {
+    @include rect-center(600px, initial);
+    margin-bottom: 60px;
+    font-size: 18px;
+    color: rgb(88, 146, 141);
+    text-align: justify;
+  }
   .section-list-section {
 
     padding-bottom: 15px;
@@ -33,6 +40,11 @@
     }
   }
 
+  .section-list-btn {
+    border: 1px solid grey;
+    color: grey;
+    cursor: pointer;
+  }
 
 
 
