add password page

--- a/frontend/app/assets/styles/_UserPage.scss
+++ b/frontend/app/assets/styles/_UserPage.scss
@@ -1,4 +1,9 @@
 .user-bg {
+
+  .row-01 {
+    margin-top: 40px;
+  }
+
   .side-menu-wrap {
     
     position: absolute;
@@ -78,8 +83,8 @@
 
       .common-title-con {
         h1 {
-          font-size: 24px;
-          font-weight: 600;
+          // font-size: 24px;
+          // font-weight: 600;
           margin-bottom: 15px;
         }
 
