fix minor issue

--- a/frontend/app/assets/styles/_UserPage.scss
+++ b/frontend/app/assets/styles/_UserPage.scss
@@ -17,6 +17,7 @@
     margin-left: 225px;
     padding-left: 80px;
     padding-top: 40px;
+    margin-bottom: 130px;
 
     .common-title-con {
       h1 {
