refactor(app): refactor route of whole project

--- a/app/assets/styles/_global.scss
+++ b/app/assets/styles/_global.scss
@@ -15,4 +15,12 @@
       overflow: hidden;
     }
   }
+
+  .global-body{
+    position: relative;
+    margin-top: 80px;
+    min-height:500px;
+    overflow: hidden;
+  }
+
 }
