--- a/app/assets/styles/_global.scss
+++ b/app/assets/styles/_global.scss
@@ -21,6 +21,10 @@
     margin-top: 80px;
     min-height:500px;
     overflow: hidden;
+
+    .content-user {
+      margin-left: 224px;
+    }
   }
 
 }
