--- a/app/assets/styles/_Button.scss
+++ b/app/assets/styles/_Button.scss
@@ -33,7 +33,13 @@ $button-border-radius: 5px;
   background-color: $button-success-color;
 }
 
+.add-btn-con {
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
 .add-btn {
   @include opacity-button;
+  border: none;
   background-color: $button-add-color;
 }
