--- a/app/assets/styles/_global.scss
+++ b/app/assets/styles/_global.scss
@@ -10,11 +10,23 @@
 
     .global-content{
       position: relative;
-      margin-top: 80px;
+      margin-top: 50px;
+      min-height:500px;
+      overflow: hidden;
+    }
+    
+  }
+
+  .content-user {
+    .global-content{
+      position: relative;
+      margin-top: 50px;
+      @include margin(80px);
       min-height:500px;
       overflow: hidden;
     }
   }
+  
 
   .global-body{
     position: relative;
