feat(app): add cards group to classroom group page

--- a/app/assets/styles/_global.scss
+++ b/app/assets/styles/_global.scss
@@ -20,7 +20,7 @@
     .global-content{
       position: relative;
       margin-left: 224px;
-      padding: 50px 80px 0 80px;
+      padding: 50px 80px 90px 80px;
       min-height:500px;
       overflow: hidden;
     }
