--- a/app/assets/styles/_DogTag.scss
+++ b/app/assets/styles/_DogTag.scss
@@ -18,7 +18,7 @@
     padding-left: 10px;
     h5 {
       font-size: 18px;
-      margin-top: 9px;
+      padding-top: 14px;
       margin-bottom: 0px;
     }
 
