feat(roles): add roles rule and route

--- a/app/assets/styles/_DogTag.scss
+++ b/app/assets/styles/_DogTag.scss
@@ -33,5 +33,13 @@
     p {
       font-size: 14px;
     }
+
+    .substite-badge {
+      padding: 2px 5px;
+      margin-left: 5px;
+      border-radius: 4px;
+      background-color: #2ecc71;
+      color: #fff;
+    }
   }
 }
