feat(job): retrieve layout of job cards

--- a/app/assets/styles/style.scss
+++ b/app/assets/styles/style.scss
@@ -37,7 +37,7 @@
 @import "_DogTag";
 @import "_HeaderBlock";
 @import "_FormGroups";
-@import "_JobList";
+@import "_JobPage";
 
 @import "_MarkdownEditor";
 @import "_CustomJumbotron";
