feat(form): add input of key value pair

--- a/app/assets/styles/_FormGroups.scss
+++ b/app/assets/styles/_FormGroups.scss
@@ -54,6 +54,7 @@ $form-group-row-margin: 20px;
 		span {
 			transform: translateY(1px);
 			display: inline-block;
+			cursor: pointer;
 		}
 		
 	}
